--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 
     <header>
         <div id="container">
-            <p id="title">BUSHIDO</p>
-            <p id="subtitle">O caminho do guerreiro</p>
+            <div id="align">
+                <p id="title">BU<span id="span">SHI</span>DO</p>
+                <p id="subtitle">O CAMINHO DO GUERREIRO</p>
+            </div>
+            <p id="content">
+                Existe um motivo pelo qual os samurais são lembrados até hoje. Além de um grande exemplo de força e
+                disciplina, os guerreiros seguiam uma código de honra e conduta que deveria ser ensinado até hoje: O
+                Bushidô (武士道) ou “O Caminho do Guerreiro”.
+            </p>
         </div>
     </header>
 
     <main>
         <div class="mainContainer">
 
-            <div class="card">
+            <p id="mainTitle">PRINCIPIOS CONCILIADOS COM GESTãO DE PROJETOS</p>
+
+            <div class="card" onmouseover="hover1()" onmouseleave="nothover1()">
                 <div class="kanji-container">
                     <p class="kanji">義</p>
                 </div>
                 <p class="japanese">Gi</p>
                 <p class="portuguese">Justiça</p>
-                <p class="description">Esta regra diz respeito à integridade. Você deve acreditar que a justiça não é
+                <p class="description" id="description1">Esta regra diz respeito à integridade. Você deve acreditar que
+                    a justiça não é
                     algo
                     que é
                     praticado pelos
@@ -35,13 +45,14 @@
                     naquilo que é certo e justo para as pessoas ao seu redor.</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover2()" onmouseleave="nothover2()">
                 <div class="kanji-container">
                     <p class="kanji">勇</p>
                 </div>
                 <p class="japanese">Yuu</p>
                 <p class="portuguese">Coragem</p>
-                <p class="description">Viver é arriscado e perigoso. Ficar escondido não é a melhor maneira de encarar a
+                <p class="description" id="description2">Viver é arriscado e perigoso. Ficar escondido não é a melhor
+                    maneira de encarar a
                     vida.
                     Você deve se esforçar para viver ao máximo e intensamente. Mas ser corajoso não é ser um idiota.
                     Você
@@ -49,13 +60,14 @@
                     ter inteligência e cautela por trás de seus atos.</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover3()" onmouseleave="nothover3()">
                 <div class="kanji-container">
                     <p class="kanji">仁</p>
                 </div>
                 <p class="japanese">Jin</p>
                 <p class="portuguese">Compaixão</p>
-                <p class="description">Um samurai treina arduamente para fazer o bem. Amor, amizade, solidariedade e
+                <p class="description" id="description3">Um samurai treina arduamente para fazer o bem. Amor, amizade,
+                    solidariedade e
                     nobreza
                     de
                     sentimentos são considerados como os maiores atributos da alma. Ajude seus colegas em todas as
@@ -63,13 +75,14 @@
                     que houver.</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover4()" onmouseleave="nothover4()">
                 <div class="kanji-container">
                     <p class="kanji">礼</p>
                 </div>
                 <p class="japanese">Rei</p>
                 <p class="portuguese">Respeito</p>
-                <p class="description">O samurai não tem nenhuma razão para ser cruel. Não há necessidade de provar a
+                <p class="description" id="description4">O samurai não tem nenhuma razão para ser cruel. Não há
+                    necessidade de provar a
                     sua
                     força.
                     Ele deve ser cortês até mesmo para com os seus inimigos. Se não fosse assim, ele não seria melhor do
@@ -79,25 +92,27 @@
                     seu redor.</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover5()" onmouseleave="nothover5()">
                 <div class="kanji-container">
                     <p class="kanji">诚</p>
                 </div>
                 <p class="japanese">Makoto</p>
                 <p class="portuguese">Honestidade</p>
-                <p class="description">Mentir é um ato covarde e desonroso. Quando um samurai diz que vai fazer algo, é
+                <p class="description" id="description5">Mentir é um ato covarde e desonroso. Quando um samurai diz que
+                    vai fazer algo, é
                     como
                     se
                     já tivesse feito. Nada vai impedi-lo de cumprir uma promessa</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover6()" onmouseleave="nothover6()">
                 <div class="kanji-container">
                     <p class="kanji">誉</p>
                 </div>
                 <p class="japanese">Meiyo</p>
                 <p class="portuguese">Honra</p>
-                <p class="description">O verdadeiro samurai só tem um juiz de sua honra: ele mesmo. As escolhas que você
+                <p class="description" id="description6">O verdadeiro samurai só tem um juiz de sua honra: ele mesmo. As
+                    escolhas que você
                     faz
                     e
                     como você trabalha para obtê-las são um reflexo de quem você realmente é. Você não pode se esconder
@@ -106,20 +121,21 @@
                     mesmo.</p>
             </div>
 
-            <div class="card">
+            <div class="card" onmouseover="hover7()" onmouseleave="nothover7()">
                 <div class="kanji-container">
                     <p class="kanji">忠</p>
                 </div>
                 <p class="japanese">Chuu</p>
                 <p class="portuguese">Lealdade</p>
-                <p class="description">Um samurai é leal àqueles que estão sob seus cuidados. Por quem ele é
+                <p class="description" id="description7">Um samurai é leal àqueles que estão sob seus cuidados. Por quem
+                    ele é
                     responsável,
                     ele
                     permanece fiel.</p>
             </div>
         </div>
     </main>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
